--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-nice-avatar": "^1.5.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
